# example-flask-package-python3.8

./: Dockerfile  index.html  pyproject.toml
app/app/: main.py
app/app/db/: database.db
app/app/tests/: auth_test.py  test.db  test_client.py  test_user_2.py
